# DoppelCast

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: pages.yml  release.yml
docs/: index.html
src/: App.css  App.tsx  api.ts  scrcpyArgs.ts  theme.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scrcpy.rs
src/components/: Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  Toggle.tsx
src/pages/: AboutPage.tsx  HomePage.tsx  SettingsPages.tsx
